--- a/package.json
+++ b/package.json
@@ -36,18 +36,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "google-p12-pem": "^1.0.0",
     "jws": "^3.1.5",
-    "mime": "^2.2.0",
-    "pify": "^4.0.0"
+    "mime": "^2.2.0"
   },
   "devDependencies": {
     "@types/jws": "^3.1.0",
     "@types/mime": "^2.0.0",
     "@types/mocha": "^5.0.0",
     "@types/nock": "^9.1.2",
-    "@types/node": "^10.0.3",
-    "@types/pify": "^3.0.0",
     "codecov": "^3.0.2",
     "gts": "^0.8.0",
     "intelli-espower-loader": "^1.0.1",
